# TileXR

./: .gitattributes  .gitignore  .gitmodules  .hcomm_gitignore  .ops_gitignore  AGENTS.md  BUILD_VERIFICATION.md  CLAUDE.md  CMakeLists.txt  README.md  UDMA_INTEGRATION_SUMMARY.md  ascend950dt_9584_chip.patch  cann_download_install.sh  cann_local_install.sh  common_env.sh  common_util.sh  driver_fix.sh  hcomm_build_install.sh  hcomm_clean_build_install.sh  hcomm_local_install.sh  opbase_build_install.sh  ops_build_run.sh  ops_only_run.sh  prepare.sh  run_ops_test.sh  test_allreduce.sh  test_build.sh
op-simulator/examples/moe_epcard_compare/: CMakeLists.txt  README.md  build_runner.sh  run_matrix.sh  run_moe_epcard_compare.sh  run_priority_matrix.sh  runner.cpp
src/collectives/: CMakeLists.txt
src/collectives/host/: collective_backend.cpp  collective_backend.h  collective_kernel.cpp  collective_kernel.h  collective_launcher.cpp  collective_utils.cpp  collective_utils.h  perf_trace_report.cpp  perf_trace_report.h  perf_trace_session.cpp  perf_trace_session.h  tilexr_collectives.cpp
src/collectives/kernels/: CMakeLists.txt  allreduce_big_data.h  collectives.h  datacopy_gm2gm.h  lccl_op.h  perf_trace_kernel.h  tilexr_lccl_op.cpp
src/comm/: CMakeLists.txt  comm_wrap.cpp  tilexr_comm.cpp  tilexr_comm.h  tilexr_internal.cpp  tilexr_internal.h
src/comm/ccu/: tilexr_ccu_abi_constants.h  tilexr_ccu_backend.cpp  tilexr_ccu_backend.h  tilexr_ccu_barrier_program.cpp  tilexr_ccu_barrier_program.h  tilexr_ccu_collective_planner.cpp  tilexr_ccu_collective_planner.h  tilexr_ccu_direct_orchestrator.cpp  tilexr_ccu_direct_orchestrator.h  tilexr_ccu_direct_runtime.cpp  tilexr_ccu_direct_runtime.h  tilexr_ccu_driver_adapter.cpp  tilexr_ccu_driver_adapter.h  tilexr_ccu_executor.cpp  tilexr_ccu_executor.h  tilexr_ccu_hccp_loader.cpp  tilexr_ccu_hccp_loader.h  tilexr_ccu_hccp_types.h  tilexr_ccu_install_provider.cpp  tilexr_ccu_install_provider.h  tilexr_ccu_launch_package.cpp  tilexr_ccu_launch_package.h  tilexr_ccu_lower_layer_payloads.cpp  tilexr_ccu_lower_layer_payloads.h  tilexr_ccu_lower_layer_plan_builder.cpp  tilexr_ccu_lower_layer_plan_builder.h  tilexr_ccu_memory_program.cpp  tilexr_ccu_memory_program.h  tilexr_ccu_microcode.cpp  tilexr_ccu_microcode.h  tilexr_ccu_producer_plan.cpp  tilexr_ccu_producer_plan.h  tilexr_ccu_provider.cpp  tilexr_ccu_provider.h  tilexr_ccu_ra_custom_channel_provider.cpp  tilexr_ccu_ra_custom_channel_provider.h  tilexr_ccu_repository.cpp  tilexr_ccu_repository.h  tilexr_ccu_resource_allocator.cpp  tilexr_ccu_resource_allocator.h  (+6 more)
src/comm/sdma/: tilexr_sdma_transport.cpp  tilexr_sdma_transport.h
src/comm/udma/: tilexr_hccp_loader.cpp  tilexr_hccp_loader.h  tilexr_udma_context.cpp  tilexr_udma_context.h  tilexr_udma_layout.cpp  tilexr_udma_layout.h  tilexr_udma_transport.cpp  tilexr_udma_transport.h
src/ep/: CMakeLists.txt
src/ep/common/: ep_window.h
src/ep/host/: ep_dispatch_host.cpp  ep_dispatch_host.h  ep_kernel_launch.cpp  ep_kernel_launch.h  ep_launch_context.cpp  ep_layout.cpp  ep_layout.h  tilexr_ep_dispatch.cpp
src/ep/kernels/: tilexr_ep_combine_data_as_flag.h  tilexr_ep_combine_helpers.h  tilexr_ep_combine_kernel.cpp  tilexr_ep_combine_udma_wqe_simt.h  tilexr_ep_dispatch_helpers.h  tilexr_ep_dispatch_kernel.cpp  tilexr_ep_kernel_common.h
tests/checker/: CMakeLists.txt
tests/checker/golden/: read_before_copy_summary.txt
tests/checker/unit/: test_checker_allgather_hdb_header_probe.cpp  test_checker_allreduce_big_data_header_probe.cpp  test_checker_cli_args.cpp  test_checker_diagnostics.cpp  test_checker_ep_dispatch_oracle_probe.cpp  test_checker_executor.cpp  test_checker_header_probe.cpp  test_checker_oracles.cpp  test_checker_reports.cpp  test_checker_shim_events.cpp  test_checker_source_preservation.cpp  test_checker_sources.cpp  test_checker_trace_adapter_generator.cpp  test_checker_trace_bundle_verifier.cpp  test_checker_trace_materializer.cpp  test_checker_trace_schedule.cpp  test_checker_world.cpp
tests/ci/: CMakeLists.txt  test_cann_downloader.sh  test_cann_lifecycle.sh  test_cann_local_install_permissions.sh  test_cann_tree.sh  test_common_env_override.sh  test_control_contract.py  test_gate.py  test_npu_inventory.sh  test_npu_state.py  test_provision_dry_run.sh  test_runner_token.sh  test_workflows.rb
tests/ci/fixtures/: npu_smi_busy.txt  npu_smi_health_ok.txt  npu_smi_idle.txt  npu_smi_info_blue_25_5.txt  npu_smi_product_unsupported.txt
tests/collectives/: CMakeLists.txt  MULTIHOST_PROFILING_README.md  README.md  deploy_and_run_vllm_remote.sh  run_collective_perf.sh  run_collective_perf_multihost.sh  run_collectives_correctness.sh  tilexr_collective_profile_report.py
tests/collectives/cmake/: install_prefix_smoke.cmake.in
tests/collectives/integration/: test_tilexr_collectives_correctness.cpp
tests/collectives/tilexr-tests/: tilexr_collective_perf.cpp
tests/collectives/unit/: test_collective_host_utils.cpp  test_collective_perf_report.cpp  test_collective_perf_session.cpp  test_collective_profile_report.py  test_prepare_host_launch_context.cpp  test_tilexr_collective_backend_options.cpp  test_tilexr_collectives_api.cpp  test_tilexr_collectives_header_compile.cpp  test_tilexr_collectives_kernel_ownership.cpp  test_tilexr_collectives_stub_behavior.cpp  test_tilexr_collectives_tools_sources.cpp  test_tilexr_collectives_uninitialized_comm.cpp  test_tilexr_perf_trace_layout.cpp  test_vllm_collectives_integration_sources.py  test_vllm_collectives_patch.py
tests/ep/: CMakeLists.txt  README.md  build.sh
tests/ep/demo/: deploy_and_run_blue.sh  deploy_and_run_remote.sh  run_tilexr_ep_dispatch_demo.sh  tilexr_ep_dispatch_demo.cpp
tests/ep/unit/: test_tilexr_ep_api_sources.cpp  test_tilexr_ep_host_validation.cpp  test_tilexr_ep_kernel_sources.cpp  test_tilexr_ep_layout.cpp
tests/memory/: CMakeLists.txt  README.md  build.sh
tests/memory/demo/: run_tilexr_memory_demo.sh  tilexr_memory_demo.cpp  tilexr_memory_demo_kernel.cpp
tools/checker/: CMakeLists.txt  README.md
tools/checker/shim/: kernel_operator.h
(+350 files in other folders)
